--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,7 @@
 :root {
     --total_black: #000000;
     --soft-grey: #F7F7F7;
-    --dow_green-text: #E0FFFF;	
+    --dow_green-text: #FFFFFF;	
     --silver: #C0C0C0;
     --silve_transparent: rgba(192, 192, 192, 0.16);
     --sub_orange:  rgba(227, 179, 83);
