--- a/mediaCSS/DraLGS-tablet.css
+++ b/mediaCSS/DraLGS-tablet.css
@@ -31,8 +31,7 @@
 .profile_picture {
     width: 40%;
     max-width: 800px;
-    margin-left: 50px;
- }
+}
 .graphic_menu {
     width: 100%;
     position: relative;  
@@ -48,7 +47,7 @@
     text-align: center;
     
 }
-.card-for-tablet1 {
+/* .card-for-tablet1 {
     position: absolute;
     top: -720px;
     left: calc(50% + 10px);
@@ -62,7 +61,7 @@
     position: absolute;
     top: -720px;
     left: calc(50% + 250px);
-}
+} */
 .nav-items {
     width: 320px;
     height: 50px;
@@ -80,4 +79,60 @@
 .paragraph_continer {
     max-width: 800px;
     font-size: 1.8rem;
+}
+@media screen and (min-width: 830px){ 
+    .profile_information_content {
+        width: 70%;
+        max-width: 600px;
+    }
+
+    .contente_description {
+        padding: 10px 28px;
+        border-radius: 12px 12px 0 0;
+    }
+
+    .contente_description p {
+        font-size: 1.4rem;
+        line-height: 16px;
+    }
+    .formation_experience_attention {
+        max-width: 600px;
+    }
+    .formation {
+        border-radius: 0 0 0 12px;
+    }
+    .description_card {
+        gap: 14px;
+    }
+
+    .formation_icon {
+        width: 18px;
+        height: 18px;
+    }
+    .description_card p {
+        font-size: 1.2rem;
+    }
+    .formation_description ul li {
+        font-size: 1rem;
+        line-height: 10px;
+        list-style: none;
+        margin-bottom: 8px;
+    }
+    .atention_list_element  li{
+        margin-bottom: 6px !important;
+    }
+    .button_email {
+        gap: 10%;
+        padding: 0 10px;
+    }
+    .button_email img {
+        width: 27px;
+        height: 16px;
+
+    }
+    .button_email p {
+        font-size: 1.2rem;
+        line-height: 12px;
+        letter-spacing: 0.6px;
+    }
 }
