--- a/styles/indMain.css
+++ b/styles/indMain.css
@@ -4,19 +4,30 @@
     width: 100vw;
     height: 600px;
     background: var(--silver);  
-    background: -webkit-linear-gradient(to bottom, var(--silve_transparent), var(--silver));  
-    background: linear-gradient(to bottom, var(--silve_transparent), var(--silver)); 
+    background: -webkit-linear-gradient(to bottom, var(--dow_green-text), var(--silver));  
+    background: linear-gradient(to bottom, var(--dow_green-text), var(--silver)); 
+    padding-top: 100px;
 
-    padding-top: 85px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
 }
 .profile_picture {
     width: 90%;
     max-width: 480px;
-    height: auto;
+    height: 290px;
     display: flex;
     position: relative;
-    padding-top: 25px;
-
+}
+.orange_circle {
+    width: 280px;
+    height: 280px;
+    border-radius: 50%;
+    background-color: var(--sub_orange);
+    position: absolute;
+    left: calc(50% - 140px);
+    top: 82px;
 }
 .black_back {
     width: 50px;
@@ -51,13 +62,181 @@
     }
 }
 
+.pink_tiny_circle {
+    border-radius: 50%;
+    position: absolute;
+    background-color: var(--sub_pink);
+}
+.to_right {
+    width: 16px;
+    height: 16px;
+    right: calc(50% - 89px);
+    top: 23px;
+}
+.to_left {
+    width: 24px;
+    height: 24px;
+    left: calc(50% - 165px);
+    top: 160px;
+}
+.orange_tiny_circle {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--sub_orange);
+    right: calc(50% - 145px);
+    top: 73px;
+}
+
+.white_circle {
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    background-color: white;
+    
+}
+
 .profile_picture img {
    width: 239px;
    height: 317px;
    display: flex;
    position: absolute;
-   left: calc(50% - 110px);
+   left: calc(50% - 118.5px);
 }
+
+.profile_information_content {
+    width: 90%;
+    max-width: 420px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    z-index: 5px;
+}
+
+.contente_description {
+    width: 100%;
+    height: 60px;
+    background-color: var(--total_black);
+    padding: 10px 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: solid 3px var(--sub_pink);
+    border-radius: 8px 8px 0 0;
+    
+}
+.contente_description p {
+    font-size: 1.2rem;
+    line-height: 14px;
+    text-align: left;
+    color: var(--dow_green-text);
+}
+.formation_experience_attention {
+    width: 100%;
+    max-width: 420px;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.card_content {
+    height: 180px;
+    padding: 8px 7%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 4px;
+}
+
+.formation{
+   background-color: var(--soft-grey);
+   border-radius: 0 0 0 8px;
+}
+.experience {
+    background-color: var(--silver_strong);
+}
+.attention {
+    background-color: rgb(235 201 132);
+    border-radius: 0 0 8px 0;
+}
+
+.description_card {
+    width: 100%;
+    height: auto;
+    display: flex;
+    gap: 10px;
+    justify-content: flex-start;
+    align-items: center;
+}
+.formation_icon {
+    width: 14px;
+    height: 14px;
+}
+
+.description_card p {
+    font-size: 1rem;
+    color: black;
+    font-weight: bold;
+    letter-spacing: 0.8px;
+}
+
+.line_separator {
+    width: 90%;
+    height: 2px;
+    background-color: var(--sub_pink);
+}
+
+.formation_description {
+    width: 100%;
+    height: 138px;
+    padding-top: 4px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+}
+.formation_description ul li {
+    font-size: 0.8rem;
+    line-height: 9px;
+    list-style: none;
+    margin-bottom: 6px;
+}
+
+.button_email {
+    width: 100%;
+    height: 24px;
+    position: absolute;
+    bottom: 0px;
+    display: flex;
+    justify-content: flex-start;
+    gap: 5%;
+    align-items: center;
+    padding: 0 6px;
+    background-color: var(--total_black);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.button_email img {
+    width: 22px;
+    height: 16px;
+}
+.button_email p {
+    font-size: 1rem;
+    line-height: 16px;
+    color: white;
+    font-weight: bold;
+
+}
+
 .profile_picture h2{
     width: 100%;
     max-width: 330px;
@@ -209,4 +388,14 @@
     margin-left: calc(50% - 20px);
     border-radius: 6px;
     margin-bottom: 10px;
+}
+
+@media  screen and (min-width: 430px) {
+    .card_content {
+        padding: 8px 10%;
+        gap: 6px;
+    }
+    .button_email {
+        gap: 8%;
+    }
 }
