--- a/styles/indMain.css
+++ b/styles/indMain.css
@@ -2,21 +2,25 @@
 
 .profile_picture-under {
     width: 100vw;
-    height: 600px;
-    background: var(--silver);  
-    background: -webkit-linear-gradient(to bottom, var(--dow_green-text), var(--silver));  
-    background: linear-gradient(to bottom, var(--dow_green-text), var(--silver)); 
-    padding-top: 100px;
-
+    height: auto;
+    overflow: hidden;
+    /* background: linear-gradient(to bottom, #292828, var(--total_black)); */
+    /* padding-top: 100px; */
+    background-color: black;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
 }
+video {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
 .profile_picture {
     width: 90%;
     max-width: 480px;
-    height: 290px;
+    height: 275px;
     display: flex;
     position: relative;
 }
@@ -34,7 +38,7 @@
     height: 300px;
     display: flex;
     position: absolute;
-    background-color: var(--total_black);
+    background-color: var(--silver_strong);
     left: calc(50% - 80px);
     animation-name: inicio;
     animation-duration: 3.5s;
@@ -96,7 +100,7 @@
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    background-color: white;
+    background-color: var(--total_black)
     
 }
 
@@ -109,34 +113,49 @@
 }
 
 .profile_information_content {
-    width: 90%;
-    max-width: 420px;
-    height: auto;
+    width: 100%;
+    height: 100vh;
     display: flex;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    padding: 100px 0 40px;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    justify-content: flex-end;
+    align-items: flex-start;
     z-index: 5px;
+    background-color: rgb(26 25 25 / 56%);
 }
 
 .contente_description {
-    width: 100%;
-    height: 60px;
-    background-color: var(--total_black);
-    padding: 10px 16px;
+    width: 60%;
+    max-width: 420px;
+    height: auto;
+    padding: 10px 0 10px 20px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
-    border-bottom: solid 3px var(--sub_pink);
-    border-radius: 8px 8px 0 0;
+    align-items: flex-start;
+    background: linear-gradient(to right, #78a0f87a, transparent);
+
     
 }
+.contente_description h1 {
+    font-family: 'PT Serif', serif;
+    font-size: 2.4rem;
+    font-weight: bold;
+    color: var(--dow_green-text);
+    letter-spacing: 2px;
+    margin-bottom: 4px;
+}
 .contente_description p {
-    font-size: 1.2rem;
-    line-height: 14px;
+    font-size: 1.1rem;
+    line-height: 11px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
     text-align: left;
     color: var(--dow_green-text);
+    margin-bottom: 2px;
 }
 .formation_experience_attention {
     width: 100%;
@@ -164,7 +183,7 @@
     background-color: var(--silver_strong);
 }
 .attention {
-    background-color: rgb(235 201 132);
+    background-color: var(--silver);
     border-radius: 0 0 8px 0;
 }
 
@@ -226,7 +245,7 @@
 }
 
 .button_email img {
-    width: 22px;
+    width: 23px;
     height: 16px;
 }
 .button_email p {
@@ -268,6 +287,132 @@
     text-align: right;   
     border-bottom: solid 4px var(--sub_pink);
 }
+
+.content_interactive_text {
+    width: 90%;
+    max-width: 420px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-top: 16px;
+    padding-left: 20px;
+}
+.loader {
+    width: 100%;
+    color: #ffffff;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 2.4rem;
+    letter-spacing: 1px;
+    -webkit-box-sizing: content-box;
+    box-sizing: content-box;
+    height: 50px;
+    padding: 10px 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    border-radius: 8px;
+  }
+  
+  .words {
+    overflow: hidden;
+  }
+  
+  .word {
+    display: block;
+    height: 100%;
+    padding-left: 6px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 200;
+    font-style: italic;
+    color: #ffffff;
+    animation: cycle-words 10s infinite;
+  }
+  
+  @keyframes cycle-words {
+    10% {
+      -webkit-transform: translateY(-105%);
+      transform: translateY(-105%);
+    }
+  
+    25% {
+      -webkit-transform: translateY(-100%);
+      transform: translateY(-100%);
+    }
+  
+    35% {
+      -webkit-transform: translateY(-205%);
+      transform: translateY(-205%);
+    }
+  
+    50% {
+      -webkit-transform: translateY(-200%);
+      transform: translateY(-200%);
+    }
+  
+    60% {
+      -webkit-transform: translateY(-305%);
+      transform: translateY(-305%);
+    }
+  
+    75% {
+      -webkit-transform: translateY(-300%);
+      transform: translateY(-300%);
+    }
+  
+    85% {
+      -webkit-transform: translateY(-405%);
+      transform: translateY(-405%);
+    }
+  
+    100% {
+      -webkit-transform: translateY(-400%);
+      transform: translateY(-400%);
+    }
+  }
+  .text_action_content {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;
+    gap: 20px;
+  }
+
+  .text_action_content P {
+    font-size: 1.6rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    letter-spacing: 0.8px;
+    color: #ffffff;
+  }
+
+  .button_action {
+    cursor: pointer;
+    display: flex;
+    align-items: flex-end;
+    width: 50%;
+    height: auto;
+    margin-left: 50%;
+    gap: 14px;
+  }
+  .button_action span {
+    width: 30px;
+    height: 2px;
+    background-color: #ffffff;
+    margin-bottom: 6px;
+  }
+  .button_action p {
+    font-size: 2rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+  }
+  
 .about {
     width: 100vw;
     height: auto;
