--- a/mediaCSS/DraLGS-big.css
+++ b/mediaCSS/DraLGS-big.css
@@ -39,6 +39,9 @@
     cursor: pointer;
     
 }
+.list_item:hover {
+    scale: 1.1;
+}
 .nav_link {
     text-transform: uppercase;
     font-size: 1.6rem;
@@ -52,6 +55,7 @@
     border-bottom: solid 2px var(--soft-grey);
     color: var(--dow_green-text);
     opacity: 1;
+    
 }
 .LGS-big_show1 {
     display: flex;
@@ -62,7 +66,7 @@
     height: auto;
     top: 70px;
     background-color:  rgba(52, 52, 52, 0.825);
-    box-shadow: 7px 7px 16px #272727d3;
+    box-shadow: 4px 4px 10px #272727d3;
     border-radius: 0px 0px 6px 0px;
     padding: 20px 0px;
     text-align: center;
@@ -71,6 +75,17 @@
     opacity: 0;
     z-index: 10;
     transition: all 300ms ease;
+}
+.LGS-big_show1::before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-bottom: 12px solid rgba(52, 52, 52, 0.825);
+    position: absolute;
+    top: -12px;
+    left: 20px;
 }
 .nav_sub_list {
     font-size: 1.6rem;
@@ -91,7 +106,7 @@
 .list_item:hover .LGS-big_show1 {
     visibility: visible;
     opacity: 1;
-    top: 54px;
+    top: 40px;
 }
 
 .profile_picture-under {
