--- a/mediaCSS/DraLGS-size-plus.css
+++ b/mediaCSS/DraLGS-size-plus.css
@@ -5,3 +5,41 @@
 .forLGS-big {
     right: 60px;
 }
+.contente_description h1 {
+    font-size: 2.8rem;
+    margin-bottom: 6px;
+    letter-spacing: 2.2px;
+}
+.contente_description p {
+    font-size: 1.4rem;
+    line-height: 14px;
+    letter-spacing: 0.8px;
+    margin-bottom: 3px;
+}
+.content_interactive_text {
+    width: 60%;
+    max-width: 700px;
+}
+.loader {
+    font-size: 3.8rem;
+    height: 80px;
+    letter-spacing: 2px;
+}
+.text_action_content {
+    gap: 84px;
+}
+.text_action_content P {
+    font-size: 2.8rem;
+    letter-spacing: 1px;
+}
+.button_action {
+    margin-left: 400px;
+    gap: 18px;
+}
+.button_action span {
+    width: 36px;
+    margin-bottom: 10px;
+}
+.button_action p {
+    font-size: 3rem;
+}
