--- a/styles/indMain.css
+++ b/styles/indMain.css
@@ -125,6 +125,7 @@ video {
     align-items: flex-start;
     z-index: 5px;
     background-color: rgb(26 25 25 / 56%);
+    overflow: hidden;
 }
 
 .contente_description {
