--- a/mediaCSS/DraLGS-tablet.css
+++ b/mediaCSS/DraLGS-tablet.css
@@ -77,6 +77,12 @@
     font-size: 1.8rem;
 }
 
+.to_right_image_continer {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+}
+
 @media screen and (min-width: 750px) and (min-height: 900px) {
     .profile_information_content {
         padding: 100px 0 80px;
@@ -90,6 +96,79 @@
         position: relative;
         margin-top: 40px;
         padding-left: 20px;
+    }
+    .content_text_personal_description {
+        width: 80%;
+        max-width: 540px;
+    }
+    .referens_persoal_data h1 {
+        font-size: 2.4rem;
+    }
+    .referens_persoal_data p {
+        font-size: 1.3rem;
+        line-height: 13px;
+    }
+    .formation_experience_attention {
+        width: 90%;
+        max-width: 540px;
+        margin: 36px 0;
+        gap: 16px;
+    }
+    .card_content {
+        padding: 10px 8%;
+        gap: 6px;
+    }
+    .formation_icon {
+        width: 16px;
+        height: 16px;
+    }
+    .description_card p {
+        font-size: 1.4rem;
+    }
+    .formation_description ul li {
+        font-size: 1.2rem;
+        line-height: 12px;
+        margin-bottom: 8px;
+    }
+    .attention {
+        width: 80%;
+        max-width: 540px;
+    }
+    .attention_icon {
+        width: 23px;
+        height: 26px;
+    }
+    .description_atention p {
+        font-size: 2rem;
+        line-height: 20px;
+        letter-spacing: 1px;
+    }
+    .content_atention_description {
+        padding: 10px 0 0 10px;
+    }
+    .content_atention_description ul li {
+        font-size: 1.6rem;
+    }
+    .space_separator {
+        height: 12px;
+    }
+    .content_action_personal_data {
+        width: 80%;
+        max-width: 540px;
+        align-items: center;
+        gap: 30px;
+        margin: 60px 0 30px;
+    }
+    .content_action_personal_data p {
+        font-size: 2.8rem;
+        letter-spacing: 1.6px;
+    }
+
+    .button_action .color_in_black {
+        font-size: 2rem;
+    }
+    .to_right_image_continer {
+        height: 580px;
     }
 }
 
@@ -127,12 +206,40 @@
         font-size: 1.4rem;
         line-height: 16px;
     }
+
+    .content_text_personal_description {
+        width: 80%;
+        max-width: 540px;
+    }
+    .referens_persoal_data h1 {
+        font-size: 2.4rem;
+    }
+    .referens_persoal_data p {
+        font-size: 1.3rem;
+        line-height: 13px;
+    }
     .formation_experience_attention {
-        max-width: 600px;
+        max-width: 540px;
+        gap: 32px;
     }
-    .formation {
-        border-radius: 0 0 0 12px;
+    
+    .card_content {
+        padding: 10px 8%;
+        gap: 6px;
     }
+    .formation_icon {
+        width: 16px;
+        height: 16px;
+    }
+    .description_card p {
+        font-size: 1.4rem;
+    }
+    .formation_description ul li {
+        font-size: 1.2rem;
+        line-height: 12px;
+        margin-bottom: 8px;
+    }
+
     .description_card {
         gap: 14px;
     }
@@ -144,30 +251,43 @@
     .description_card p {
         font-size: 1.2rem;
     }
-    .formation_description ul li {
-        font-size: 1rem;
-        line-height: 10px;
-        list-style: none;
-        margin-bottom: 8px;
-    }
-    .atention_list_element  li{
-        margin-bottom: 6px !important;
-    }
-    .button_email {
-        gap: 10%;
-        padding: 0 10px;
-    }
-    .button_email img {
-        width: 27px;
-        height: 16px;
 
+    .attention {
+        width: 80%;
+        max-width: 540px;
     }
-    .button_email p {
-        font-size: 1.2rem;
-        line-height: 12px;
-        letter-spacing: 0.6px;
+    .attention_icon {
+        width: 23px;
+        height: 26px;
+    }
+    .description_atention p {
+        font-size: 2rem;
+        line-height: 20px;
+        letter-spacing: 1px;
     }
 
+    .content_atention_description ul li {
+        font-size: 1.6rem;
+    }
+    .content_action_personal_data {
+        width: 80%;
+        max-width: 540px;
+        align-items: center;
+        gap: 30px;
+        margin: 50px 0 30px;
+    }
+    .content_action_personal_data p {
+        font-size: 2.8rem;
+        letter-spacing: 1.6px;
+    }
+
+    .button_action .color_in_black {
+        font-size: 2rem;
+    }
+    .to_right_image_continer {
+        width: 76%;
+        height: 380px;
+    }
   
 }
 
@@ -191,5 +311,31 @@
     .button_action p {
         font-size: 2.4rem;
 
+    }
+    .content_text_personal_description {
+        max-width: 700px;
+    }
+    .formation_experience_attention {
+        width: 90%;
+        max-width: 700px;
+        margin: 60px 0;
+        gap: 60px;
+    }
+    .card_content {
+        padding: 16px 8%;
+        gap: 6px;
+        border-radius: 12px;
+    }
+    .formation_description ul li {
+        margin-bottom: 10px;
+    }
+    .attention {
+        max-width: 700px;
+    }
+    .content_action_personal_data {
+        max-width: 700px;
+    }
+    .to_right_image_continer {
+        height: 760px;
     }
 }
