--- a/mediaCSS/DraLGS-size-plus.css
+++ b/mediaCSS/DraLGS-size-plus.css
@@ -43,3 +43,80 @@
 .button_action p {
     font-size: 3rem;
 }
+.content_text_personal_description {
+    gap: 50px;
+}
+
+.referens_persoal_data h1 {
+    font-size: 3rem;
+    letter-spacing: 1.6px;
+}
+.referens_persoal_data p {
+    font-size: 1.4rem;
+    line-height: 14px;
+}
+.personal_data h3 {
+    font-size: 4rem;
+    letter-spacing: 3px;
+}
+.formation_experience_attention {
+    gap: 30px;
+}
+.card_content {
+    padding: 14px 7%;
+    gap: 8px;
+}
+.formation_icon {
+    width: 20px;
+    height: 20px;
+}
+.description_card p {
+    font-size: 1.8rem;
+}
+
+.formation_description {
+    padding-top: 8px;
+}
+.formation_description ul li {
+    font-size: 1.6rem;
+    line-height: 16px;
+    margin-bottom: 12px;
+}
+.attention_icon {
+    width: 26px;
+    height: 30px;
+}
+.description_atention p {
+    font-size: 2.4rem;
+    line-height: 24px;
+    letter-spacing: 1px;
+}
+.content_atention_description {
+    padding: 16px 0 0 16px;
+}
+.content_atention_description ul li {
+    font-size: 1.8rem;
+    letter-spacing: 0.6px;
+}
+.space_separator {
+    height: 20px;
+}
+
+.content_action_personal_data {
+    align-items: flex-start;
+    gap: 60px;
+    margin: 84px 0 10px;
+}
+
+.content_action_personal_data p {
+    font-size: 3.6rem;
+    letter-spacing: 1.6px;
+}
+.button_action .color_in_black {
+    font-size: 3rem;
+    letter-spacing: 1.8px;
+}
+.to_right_image_continer {
+    width: 100%;
+    height: 800px;
+}
