--- a/mediaCSS/DraLGS-size-plus.css
+++ b/mediaCSS/DraLGS-size-plus.css
@@ -2,6 +2,13 @@
     padding-left: 40px;
 }
 
+.header_menu h1 {
+    font-size: 2.4rem;
+}
+.header_menu p {
+    font-size: 1.6rem;
+    margin-left: 140px;
+}
 .forLGS-big {
     right: 60px;
 }
@@ -119,4 +126,19 @@
 .to_right_image_continer {
     width: 100%;
     height: 800px;
+}
+
+.content_image_profile img {
+    height: 740px;
+    width: 32%;
+    max-width: 620px;
+}
+.paragraph_continer {
+    max-width: 1000px;
+    font-size: 2.8rem;
+    line-height: 40px;
+    padding: 28px 28px;
+    top: 440px;
+    right: 28%;
+    border-radius: 16px;
 }
