--- a/mediaCSS/DraLGS-big.css
+++ b/mediaCSS/DraLGS-big.css
@@ -295,12 +295,12 @@
     max-width: 455px;
 }
 .paragraph_continer {
-    max-width: 700px;
+    max-width: 600px;
     font-size: 2.2rem;
     line-height: 30px;
-    top: 300px;
-    right: 20%;
-
+    top: 90px;
+    right: 8%;
+    border-radius: 0px;
 }
 .graphic_menu {
     display: none;
