listo hasta tablets

--- a/styles/global.css
+++ b/styles/global.css
@@ -32,5 +32,5 @@ header{
 main {
     width: 100%;
     height: auto;
-    background-color: var(--silver);
+    background-color: var(--dow_green-text);
 }
