--- a/styles/indMain.css
+++ b/styles/indMain.css
@@ -702,6 +702,10 @@ video {
     background-color: var(--sub_pink);
     border-radius: 8px;
     box-shadow:  2px 2px 5px #78a1f88a;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     text-align: center;
 }
 .image_menu {
