--- a/mediaCSS/DraLGS-tablet.css
+++ b/mediaCSS/DraLGS-tablet.css
@@ -28,50 +28,6 @@
     width: 40%;
     max-width: 800px;
 }
-.graphic_menu {
-    width: 100%;
-    position: relative;  
-    
-}
-.card_menu {
-    width: 100px;
-    height: 140px;
-    margin: 0 auto;
-    background-color: rgba(52, 52, 52, 0.825);
-    border-radius: 8px;
-    box-shadow:  5px 5px 10px #838282, -5px -5px 10px #acabab;
-    text-align: center;
-    
-}
-/* .card-for-tablet1 {
-    position: absolute;
-    top: -720px;
-    left: calc(50% + 10px);
-}
-.card-for-tablet2 {
-    position: absolute;
-    top: -720px;
-    left: calc(50% + 130px);
-}
-.card-for-tablet3 {
-    position: absolute;
-    top: -720px;
-    left: calc(50% + 250px);
-} */
-.nav-items {
-    width: 320px;
-    height: 50px;
-    top: -180px;
-    left: calc(50% + 20px);
-}
-.nav_icons {
-    margin-left: 30px;
-    margin-top: 7.5px;
-}
-.nav_icons img {
-    width: 35px;
-    height: 35px; 
-}
 
 
 .to_right_image_continer {
@@ -97,6 +53,33 @@
 
 }
 
+.graphic_menu {
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    position: relative;  
+    
+}
+.content_cards {
+    margin: 70px 0 30px;
+}
+
+.card_menu {
+    width: 120px;
+    height: 180px;
+   
+}
+.image_menu {
+    width: 80px;
+    height: 80px;
+    margin: 15px 0 30px;
+}
+.card_menu a {
+    color: var(--total_black);
+    font-size: 1.4rem;
+    line-height: 14px;
+    letter-spacing: 0.6px;
+}
 @media screen and (min-width: 750px) and (min-height: 900px) {
     .profile_information_content {
         padding: 100px 0 80px;
@@ -195,6 +178,36 @@
         padding: 12px 20px;
         top: 420px;
         right: 8%;
+    }
+    .graphic_menu {
+        width: 100%;
+        height: auto;
+        padding: 80px 0 60px;
+        justify-content: center;
+        position: relative;  
+        
+    }
+    .content_cards {
+        margin: 80px 0 50px;
+        max-width: 540px;
+    }
+    
+    .card_menu {
+        width: 150px;
+        height: 220px;
+       
+    }
+    .image_menu {
+        width: 100px;
+        height: 100px;
+        margin: 20px 0 30px;
+    }
+    .card_menu a {
+        color: var(--total_black);
+        font-size: 1.4rem;
+        line-height: 14px;
+        letter-spacing: 0.6px;
+        text-align: center;
     }
 }
 
@@ -326,7 +339,33 @@
         top: 29px;
         right: 8%;
     }
-   
+    .graphic_menu {
+        width: 100%;
+        height: auto;
+
+    }
+    .content_cards {
+        margin: 50px 0 10px;
+        max-width: 540px;
+    }
+    
+    .card_menu {
+        width: 160px;
+        height: 200px;
+       
+    }
+    .image_menu {
+        width: 100px;
+        height: 100px;
+        margin: 20px 0 30px;
+    }
+    .card_menu a {
+        color: var(--total_black);
+        font-size: 1.4rem;
+        line-height: 14px;
+        letter-spacing: 0.6px;
+        text-align: center;
+    }
   
 }
 
@@ -395,5 +434,24 @@
     }
     .paragraph_continer strong {
         padding: 0 4px;
+    }
+    .graphic_menu {
+        width: 100%;
+        height: auto;
+        padding: 120px 0 90px;
+        justify-content: center;
+        position: relative;
+    }
+    .content_cards {
+        margin: 100px 0 60px;
+        max-width: 700px;
+    }
+    .card_menu {
+        width: 180px;
+        height: 230px;
+    }
+    .card_menu a {
+        font-size: 1.6rem;
+        line-height: 16px;
     }
 }
