section y footer listos todas las resoluciones

--- a/mediaCSS/DraLGS-size-plus.css
+++ b/mediaCSS/DraLGS-size-plus.css
@@ -141,3 +141,23 @@
     top: 120px;
     right: 12%;
 }
+
+.content_cards {
+    margin: 100px 0 60px;
+    max-width: 850px;
+}
+
+.card_menu {
+    width: 200px;
+    height: 270px;
+    border-radius: 12px;
+}
+.image_menu {
+    width: 130px;
+    height: 130px;
+    margin: 30px 0 40px;
+}
+.card_menu a {
+    font-size: 1.8rem;
+    line-height: 18px;
+}
